[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/OQ_Toolkit/OQ_UI2D/scripts/OQ_UI2DNotificationWindow.gd" type="Script" id=1]
[ext_resource path="res://addons/OQ_Toolkit/OQ_UI2D/OQ_UI2DCanvas.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/OQ_Toolkit/OQ_UI2D/theme/oq_ui2d_standard.theme" type="Theme" id=3]


[node name="OQ_UI2DNotificationWindow" type="Spatial"]
script = ExtResource( 1 )

[node name="OQ_UI2DCanvas" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="Panel" type="VBoxContainer" parent="OQ_UI2DCanvas"]
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="OQ_UI2DCanvas/Panel"]
margin_right = 242.0
margin_bottom = 33.0
__meta__ = {
"_editor_description_": ""
}

[node name="Title_Label" type="Label" parent="OQ_UI2DCanvas/Panel/CenterContainer2"]
margin_left = 92.0
margin_right = 149.0
margin_bottom = 33.0
text = "Title"

[node name="NotificationText_Label" type="Label" parent="OQ_UI2DCanvas/Panel"]
margin_top = 37.0
margin_right = 242.0
margin_bottom = 178.0
text = "AAA	
aaa
aaa
"

[node name="HSeparator" type="HSeparator" parent="OQ_UI2DCanvas/Panel"]
margin_top = 182.0
margin_right = 242.0
margin_bottom = 186.0

[node name="CenterContainer" type="CenterContainer" parent="OQ_UI2DCanvas/Panel"]
margin_top = 190.0
margin_right = 242.0
margin_bottom = 223.0
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="OQ_UI2DCanvas/Panel/CenterContainer"]
margin_right = 242.0
margin_bottom = 33.0
text = "Press X+A to close"
